[package]
name = "ruru"
version = "0.9.2"
authors = ["Dmitry Gritsay <unseductable@gmail.com>"]

description = "Native Ruby extensions in Rust"
documentation = "http://d-unseductable.github.io/ruru/ruru/index.html"
homepage = "https://github.com/d-unseductable/ruru"
repository = "https://github.com/d-unseductable/ruru"
readme = "README.md"
keywords = ["cruby", "mri", "ruby", "ruru"]
license = "MIT"

[dependencies]
ruby-sys = { git = "https://github.com/malept/ruby-sys", branch = "add-hash-functions" }
lazy_static = "0.2.1"
