[package]
name = "ruby-sys"
version = "0.1.1"
authors = ["Steve Klabnik <steve@steveklabnik.com>",
           "Dmitry Gritsay <unseductable@gmail.com>"]
description = "Low level bindings to MIR"
documentation = "http://d-unseductable.github.io/ruru/ruru/index.html"
homepage = "https://github.com/d-unseductable/ruru/ruby-sys"
repository = "https://github.com/d-unseductable/ruru/ruby-sys"
keywords = ["ruby"]
license = "MIT"

build = "build.rs"
links = "ruby"

[dependencies]
libc = "0.2.10"
